# wg-fuzz

./: .gitignore  Cargo.toml  README.md  interesting.sh  log.txt  test.js
bugs/: invalid-error.js  race.js  unreachable.js
code_samples/: navigator_check.txt  webgpu_program.txt
crates/acv/: Cargo.toml
crates/acv/src/: api_calls.rs  lib.rs  to_javascript.rs
crates/acv/src/code_samples/: postlude.txt  prelude.txt
crates/acv/src/to_javascript/: adapter.rs  command_encoder.rs  compute_pipeline.rs  device.rs  encoders.rs  error.rs  master.rs  mod.rs  pipeline_layout.rs  primitives.rs  program.rs  program_setup.rs  render_pass.rs  render_pipeline.rs  shader_module.rs
crates/acv/src/to_javascript/encoders/: bundle_encoder.rs  command_encoder.rs  compute_pass.rs  mod.rs  optional_render_pass.rs  render_pass.rs
crates/acv/src/to_javascript/pipeline_setup/: compute_pipeline.rs  pipeline_layout.rs  render_pipeline.rs
crates/acv/src/to_javascript/primitives/: buffer.rs  query_set.rs  sampler.rs  shader_module.rs  texture.rs
crates/acv/src/to_javascript/program_setup/: adapter.rs  device.rs  error.rs  mod.rs  program.rs  submit.rs
crates/wg-fuzz/: Cargo.toml
crates/wg-fuzz/code_samples/: navigator_check.txt  prelude.txt  render_shader.wgsl  webgpu_program.txt
crates/wg-fuzz/src/: calls.rs  lib.rs  main.rs  random_adapter.rs
possible_bugs/: scratch
reduction/: interesting.sh  log.txt  scratch  shader_module001.wgsl  shader_module004.wgsl  shader_module012.wgsl  shader_module014.wgsl  shader_module015.wgsl  shader_module030.wgsl  shader_module121.wgsl  test.js  (+1 more)
(+392 files in other folders)
