[package]
name = "acv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
art = { path = "../art" }
wgsl_generator = { path = "../wgslsmith/wgsl_generator" }
reconditioner = { path = "../wgslsmith/reconditioner" }
rand = "0.8.5"
