[package]
name = "wg-fuzz"
version = "0.1.0"
edition = "2021"
default-run = "wg-fuzz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = { path = "../wgslsmith/generator" }
reconditioner = { path = "../wgslsmith/reconditioner" }
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"

[dependencies.clap]
version = "3.0"
features = ["derive"]