[package]
name = "wg-fuzz"
version = "0.1.0"
edition = "2021"
default-run = "wg-fuzz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgsl_generator = { path = "../wgslsmith/wgsl_generator" }
reconditioner = { path = "../wgslsmith/reconditioner" }
art = { path = "../art" }
acv = { path = "../acv" }
generator = { path = "../generator" }
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"

[dependencies.clap]
version = "3.0"
features = ["derive"]